--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,25 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "19.1.0"
-
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
     defaultConfig {
-        applicationId "john.com.waveview"
-        minSdkVersion 8
-        targetSdkVersion 20
+        applicationId 'com.waveview.demo'
+        minSdkVersion 15
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.0.0'
     compile project(':library')
 }
